特征工程梳理

--- a/ML-Action/00-feature-engeneering.ipynb
+++ b/ML-Action/00-feature-engeneering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,12 +10,12 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.21.2\n",
-      "pandas:      1.3.3\n",
-      "matplotlib:  3.4.3\n",
-      "sklearn:     0.24.2\n",
-      "seaborn:     0.11.2\n",
-      "plotly:      5.3.1\n"
+      "numpy:       1.20.1\n",
+      "pandas:      1.2.4\n",
+      "matplotlib:  3.3.4\n",
+      "sklearn:     0.24.1\n",
+      "seaborn:     0.11.1\n",
+      "plotly:      5.1.0\n"
      ]
     }
    ],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\Project-Workspace\\Python-Projects\\DataAnalysis\n"
+      "D:\\Projects\\DataAnalysis\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -95,10 +95,10 @@
     {
      "data": {
       "text/plain": [
-       "'D:\\\\Project-Workspace\\\\Python-Projects\\\\DataAnalysis'"
+       "'D:\\\\Projects\\\\DataAnalysis'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +662,10 @@
     "+ 在**以梯度和矩阵为核心**的算法中，譬如逻辑回归，支持向量机，神经网络，特征缩放可以加快求解速度\n",
     "+ 涉及到**距离计算**的模型，譬如K近邻，K-Means聚类中，特征缩放可以帮我们**提升模型精度，避免某一个取值范围特别大的特征对距离计算造成影响**\n",
     "\n",
-    "> 对于树模型，一般不需要做特征缩放处理，因为它们对于特征尺度并不敏感。\n",
+    "注意：\n",
+    "> + 对于树模型，一般不需要做特征缩放处理，因为它们对于特征尺度并不敏感。  \n",
+    "> + 对于大部分为0的稀疏数据，不要使用上述的缩放，特别是min-max和标准化，因为这两种变换都会将原始值平移一段距离，因此**会将稀疏特征向量变成密集特征向量**！！！\n",
+    "\n",
     "\n",
     "常见的特征缩放有如下方式："
    ]
@@ -674,51 +677,139 @@
    },
    "source": [
     "### 归一化  \n",
-    "使用最大值和最小值来进行归一化，将数据缩放到 $[0, 1]$ 之间.  \n",
-    "+ `preprocessing.MinMaxScaler(feature_range=(0, 1), *, copy=True, clip=False)`\n",
-    "  常见属性：\n",
+    "\n",
+    "使用最大值和最小值来进行归一化，将数据缩放到 $[0, 1]$ 之间.\n",
+    "\n",
+    "sklearn中提供了如下的类实现该操作，并且在标准的基础上增加了缩放到指定区间（feature_range参数）的操作，原理如下.  \n",
+    "设 feature_range= $[min, max]$，给定数据X，最大值和最小值分别为 $[X_{min}, X_{max}]$，那么归一化公式为：  \n",
+    "\n",
+    "$\\tilde{x} = \\frac{x - X_{min}}{X_{max} -- X_{min}} (max - min) + min = x  \\frac{max - min}{X_{max} -- X_{min}} + min - X_{min} \\frac{max-min}{X_{max} -- X_{min}}$,  \n",
+    "\n",
+    "其中的 $\\frac{max - min}{X_{max} -- X_{min}}$ 被称为 scale，$min - X_{min} \\frac{max-min}{X_{max} -- X_{min}}$ 被称为 min。\n",
+    "\n",
+    "+ `preprocessing.MinMaxScaler(feature_range=(0, 1), *, copy=True, clip=False)`  \n",
+    "  对象属性：\n",
     "  + min_: shape=(n_features, )\n",
     "  + scale_: shape=(n_features, )\n",
-    "  + data_min_, data_max_: shape=(n_features, )\n",
-    "  + data_range_: shape=(n_features, )\n",
-    "  + n_features_in_: \n",
-    "  + n_samples_seen_:\n",
-    "  + features_names_in_: shape=(n_features, )"
+    "  + data_min_, data_max_: shape=(n_features, )，每个特征实际的最大、最小值\n",
+    "  + data_range_: shape=(n_features, )，每个特征的数据范围，注意，它是最大值-最小值\n",
+    "  + n_features_in_: 特征数量\n",
+    "  + n_samples_seen_: 样本数量\n",
+    "  + features_names_in_: shape=(n_features, )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
-    "scaler = MinMaxScaler()\n",
-    "X = np.array([[-1, 2], [-0.5, 6], [0, 10], [1, 18]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([[-1. ,  2. ],\n",
-       "       [-0.5,  6. ],\n",
-       "       [ 0. , 10. ],\n",
-       "       [ 1. , 18. ]])"
+       "MinMaxScaler()"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "X = np.array([[1, 2], [3, 4], [5, 6]])\n",
+    "print(X)\n",
+    "scaler.fit(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scaler.min_:  [-0.25 -0.5 ]\n",
+      "scaler.scale_:  [0.25 0.25]\n",
+      "scaler.data_min_:  [1. 2.]\n",
+      "scaler.data_max_:  [5. 6.]\n",
+      "scaler.data_range_:  [4. 4.]\n",
+      "scaler.n_features_in_:  2\n",
+      "scaler.n_samples_seen_:  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('scaler.min_: ', scaler.min_)\n",
+    "print('scaler.scale_: ', scaler.scale_)\n",
+    "print('scaler.data_min_: ', scaler.data_min_)\n",
+    "print('scaler.data_max_: ', scaler.data_max_)\n",
+    "print('scaler.data_range_: ', scaler.data_range_)\n",
+    "print('scaler.n_features_in_: ', scaler.n_features_in_)\n",
+    "print('scaler.n_samples_seen_: ', scaler.n_samples_seen_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0. , 0. ],\n",
+       "       [0.5, 0.5],\n",
+       "       [1. , 1. ]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler.transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "根据上面的公式，归一化的结果也可用下面的方式得到："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0. , 0. ],\n",
+       "       [0.5, 0.5],\n",
+       "       [1. , 1. ]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X * scaler.scale_ + scaler.min_"
    ]
   },
   {
@@ -729,8 +820,134 @@
    },
    "source": [
     "### 标准化  \n",
+    "\n",
     "减去均值，然后除以标准差，实现均值=0，方差=1的标准化.  \n",
-    "`preprocessing.StandardScaler`"
+    "\n",
+    "+ `preprocessing.StandardScaler(copy=True, with_mean=True, with_std=True)`   \n",
+    "  参数\n",
+    "  + with_mean: 是否减去均值，默认为True\n",
+    "  + with_std: 是否除以方差，默认为True\n",
+    "  \n",
+    "  属性\n",
+    "  + scale_: 每个特征的系数\n",
+    "  + mean_: 每个特征的均值\n",
+    "  + var_: 每个特征的方差\n",
+    "  + n_features_in_: 特征数量\n",
+    "  + n_samples_seen_: 样本数量\n",
+    "  + features_names_in_: shape=(n_features, )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "StandardScaler()"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X = np.array([[1, 2], [3, 4], [5, 6]])\n",
+    "print(X)\n",
+    "scaler.fit(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scaler.mean_:  [3. 4.]\n",
+      "scaler.scale_:  [1.63299316 1.63299316]\n",
+      "scaler.var_:  [2.66666667 2.66666667]\n",
+      "np.sqrt(scaler.var_):  [1.63299316 1.63299316]\n",
+      "scaler.n_features_in_:  2\n",
+      "scaler.n_samples_seen_:  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('scaler.mean_: ', scaler.mean_)\n",
+    "print('scaler.scale_: ', scaler.scale_)\n",
+    "print('scaler.var_: ', scaler.var_)\n",
+    "# 实际上 scale_ 就是 var_ 开方得到\n",
+    "print('np.sqrt(scaler.var_): ', np.sqrt(scaler.var_))\n",
+    "print('scaler.n_features_in_: ', scaler.n_features_in_)\n",
+    "print('scaler.n_samples_seen_: ', scaler.n_samples_seen_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.22474487, -1.22474487],\n",
+       "       [ 0.        ,  0.        ],\n",
+       "       [ 1.22474487,  1.22474487]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler.transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "也可以通过下述方式得到同样的结果："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.22474487, -1.22474487],\n",
+       "       [ 0.        ,  0.        ],\n",
+       "       [ 1.22474487,  1.22474487]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(X - scaler.mean_)/scaler.scale_"
    ]
   },
   {
@@ -778,28 +995,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## 类别型特征的编码\n",
-    "\n",
-    "\n",
-    "\n",
-    "此外，pandas中也提供了一些函数供使用：\n",
-    "+ `pd.get_dummies()`\n",
-    "\n",
-    "但是pandas的函数问题在于，只能用于训练数据，它不方便在预测数据上重复相同的操作——也就是无法作为pipeline。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "pycharm": {
      "name": "#%% md\n"
     }
    },
    "source": [
-    "### One-Hot编码、Dummy编码和Effective编码\n",
+    "## One-Hot编码、Dummy编码和Effective编码\n",
     "\n",
     "+ One-Hot编码：将有$k$类别的分类变量编码成一个长度为$k$的 0-1 向量，不过这种方式使用的比特位要多一位，它有$k$个自由度。\n",
     "+ Dummy编码(dummy coding)：只使用长度为$k-1$的 0-1 向量，也因此只有$k-1$个自由度。\n",
@@ -810,7 +1011,9 @@
     "  + data：数据\n",
     "  + columns: list，指定需要编码的列名\n",
     "  + drop_first: 是否保留第一个level的编码，也就是在one-hot和dummy中选择，默认为False，也就是one-hot编码\n",
-    "  + dtype: 注意，默认下编码后的特征列的类型为`np.unit8`，它是**无符号整数**。"
+    "  + dtype: 注意，默认下编码后的特征列的类型为`np.unit8`，它是**无符号整数**。\n",
+    "  \n",
+    "但是pandas的函数问题在于，只能用于训练数据，它不方便在预测数据上重复相同的操作——也就是无法作为pipeline。"
    ]
   },
   {
@@ -1238,13 +1441,69 @@
    "source": [
     "### sklearn中的分类特征编码\n",
     "\n",
-    "sklearn中提供了如下的类用于实现对分类特征进行编码的操作：\n",
+    "sklearn中提供了如下的类用于实现对分类特征进行编码的操作："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "+ 目标变量是类别型，需要进行编码  \n",
-    "`preprocessing.LabelEncoder()`\n",
+    "`preprocessing.LabelEncoder()`，这个类适用于对**目标变量**进行序数编码的。   \n",
+    "它的使用很简单，没有参数，支持将数值或者字符串编码为从 0 开始的数字"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "encoder.classes_:  [1 3 6]\n",
+      "encoder.transform(y):  [0 1 2 2]\n",
+      "encoder.inverse_transform([2, 0, 1]) :  [6 1 3]\n",
+      "-------------------------------------------------\n",
+      "encoder.classes_:  ['a' 'b' 'c' 'e']\n",
+      "encoder.transform(y):  [0 2 1 3]\n",
+      "encoder.inverse_transform([2, 0, 3, 1]) :  ['c' 'a' 'e' 'b']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "encoder = LabelEncoder()\n",
     "\n",
+    "# 目标变量为数字\n",
+    "y = [1,3,6,6]\n",
+    "encoder.fit(y)\n",
+    "print('encoder.classes_: ', encoder.classes_)\n",
+    "print('encoder.transform(y): ', encoder.transform(y))\n",
+    "print('encoder.inverse_transform([2, 0, 1]) : ', encoder.inverse_transform([2, 0, 1]))\n",
+    "\n",
+    "print('-------------------------------------------------')\n",
+    "# 目标变量为字符串\n",
+    "y = ['a', 'c', 'b', 'e']\n",
+    "encoder.fit(y)\n",
+    "print('encoder.classes_: ', encoder.classes_)\n",
+    "print('encoder.transform(y): ', encoder.transform(y))\n",
+    "print('encoder.inverse_transform([2, 0, 3, 1]) : ', encoder.inverse_transform([2, 0, 3, 1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "+ 分类特征是有序的，需要编码成有序数值  \n",
-    "`preprocessing.OrdinalEncoder()`\n",
-    "\n",
+    "`preprocessing.OrdinalEncoder()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "+ 分类特征仅仅用于区分，没有顺序关系，也就是名义变量，使用 One-Hot 编码  \n",
     "`preprocessing.OneHotEncoder()`"
    ]
@@ -1310,7 +1569,7 @@
     "+ `preprocessing.KBinsDiscretizer(n_bins=5, encode='onehot', strategy='quantile', dtype=None)`\n",
     "  + n_bins: 分段数；也可以是一个长度=n_features的list of int，用于指定每个特征的分段数\n",
     "  + encode: 编码方式，取值如下：\n",
-    "    + one-hot, 返回one-hot编码的**稀疏矩阵*格式\n",
+    "    + one-hot, 返回one-hot编码的**稀疏矩阵**格式\n",
     "    + onehot-dense, 返回正常one-hot编码格式\n",
     "    + ordinal, 使用分段后的序号表示\n",
     "  + strategy: 分段的策略，取值如下：\n",
@@ -5537,7 +5796,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BaseEnv(Python3.8.10)",
+   "display_name": "base",
    "language": "python",
    "name": "base"
   },
@@ -5551,7 +5810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   },
   "toc-autonumbering": true
  },
