特征工程练习

--- a/ML-Action/00-feature-engeneering.ipynb
+++ b/ML-Action/00-feature-engeneering.ipynb
@@ -159,25 +159,58 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## 缺失值处理\n",
     "\n",
     "有两个处理框架：\n",
     "\n",
-    "+ `sklearn.impute`中提供了进行缺失值填充的类，主要有：\n",
-    "  1. `SimpleImputer()`，提供了如下填充策略 (`strategy=`)：\n",
+    "1、使用`sklearn.impute`中提供的类进行缺失值填充，主要有下面两个。\n",
+    "+ `SimpleImputer(missing_values=nan, strategy='mean', fill_value=None, verbose=0, copy=True, add_indicator=False)`   \n",
+    "  参数：\n",
+    "  + missing_value: 指定哪些被判定为缺失值\n",
+    "  + strategy: 指定填充策略，有如下方式：\n",
     "    + `mean`，均值填充，仅适用于数值型\n",
     "    + `median`，中位数填充，仅适用于数值型\n",
     "    + `most_frequent`，众数填充，对数值型和**字符型**特征都可用\n",
     "    + `constant`，常数填充，配合`fill_value`参数使用，对数值型和**字符型**特征都可用\n",
-    "  2. `KNNImputer()`\n",
+    "  + fill_value: 填充策略为constant时，会使用这里提供的值\n",
+    "  \n",
+    "  属性：\n",
+    "  + statistics_: shape=(n_features, ), 每个特征的缺失值\n",
+    "  + indicator_: \n",
+    "  \n",
+    "+ `KNNImputer(missing_values=nan, n_neighbors=5, weights='uniform', metric='nan_euclidean', copy=True, add_indicator=False)`   \n",
+    "  参数：\n",
+    "  + n_neighbors: 指定KNN的邻近点个数\n",
+    "  + weights: 指定权重，有如下几种策略：\n",
+    "    + uniform，均匀权重，这也是默认的策略\n",
+    "    + distance，权重和距离成反比\n",
+    "    + callable，自定义权重函数\n",
+    "  + metric：指定距离函数\n",
+    "    + nan_euclidean，欧几里得距离，默认距离\n",
+    "    + callable，自定义距离函数\n",
     "\n",
     "\n",
-    "+ pandas提供的`DataFrame.fillna()` ：\n",
-    "提供了向前填充，向后填充，常数填充这几种填充策略。\n",
+    "2、使用pandas提供的`DataFrame.fillna()`进行缺失值填充\n",
+    "+ `DataFrame.fillna(value=None, method=None, axis=None, inplace=False, limit=None, downcast=None)`\n",
+    "  + value, 用于填充的值，有如下几种方式：\n",
+    "    + scalar, 填充的值\n",
+    "    + dict, series，单独指定每列填充的值\n",
+    "  + method，填充策略\n",
+    "    + backfill\n",
+    "    + bfill\n",
+    "    + pad\n",
+    "    + ffill\n",
+    "    + None\n",
+    "  + axis, 指定填充的轴\n",
+    "  + limit, 连续填充的最大的NaN数量\n",
+    "  + downcast, 指定填充后各列的类型转换\n",
     "\n",
-    "一般来说，使用pandas进行填充比较方便，不过如果要使用均值等统计量来填充，使用sklearn更为方便。\n",
+    "\n",
+    "一般来说，使用pandas进行填充比较方便，不过如果要使用均值等统计量来填充，使用sklearn更为方便。  \n",
     "特别要注意的是，**sklearn中的策略是对所有特征一起使用的，如果传入的数据里字符型和数值型特征混用，会报错**。\n",
     "\n",
     "所以，**推荐使用pandas进行缺失值处理**。"
