--- a/DataVisualization/Python-Matplotlib.ipynb
+++ b/DataVisualization/Python-Matplotlib.ipynb
@@ -462,14 +462,16 @@
     "ax = plt.subplot() # 它只返回一个Axes对象，不返回Figure对象，不能做更加精细的控制\n",
     "ax.plot(x, y)\n",
     "\n",
-    "#第 3 种 —— 绘制多子图时推荐使用\n",
-    "fig, axes = plt.subplots(nrows=1, ncols=1)  # 同时返回了Figure对象和Axes对象组成的矩阵\n",
-    "axes[0].plot(x,y)\n",
     "\n",
-    "#第 4 种 ——— 推荐使用\n",
+    "#第 3 种 ——— 推荐使用\n",
     "fig1 = plt.figure()\n",
     "new_plot = fig1.add_subplot(111)\n",
     "new_plot.plot(x, y)\n",
+    "\n",
+    "#第 4 种 —— 绘制多子图时推荐使用\n",
+    "fig, axes = plt.subplots(nrows=1, ncols=1)  # 同时返回了Figure对象和Axes对象组成的矩阵\n",
+    "axes[0].plot(x,y)\n",
+    "\n",
     "\n",
     "#第 5 种\n",
     "fig2=plt.figure()\n",
@@ -1236,6 +1238,7 @@
     "这五处位置之间依次包含了四段数据，每段中数据量均为总数据量的1/4。通过每一段数据占据的长度，我们可以大致推断出数据的集中或离散趋势。\n",
     "\n",
     "`Axes.boxplot(self, x, notch=None, sym=None, vert=None, whis=None, positions=None, widths=None, patch_artist=None, bootstrap=None, usermedians=None, conf_intervals=None, meanline=None, showmeans=None, showcaps=None, showbox=None, showfliers=None, boxprops=None, labels=None, flierprops=None, medianprops=None, meanprops=None, capprops=None, whiskerprops=None, manage_ticks=True, autorange=False, zorder=None, *, data=None)`\n",
+    "\n",
     "详见[官方文档](https://matplotlib.org/api/_as_gen/matplotlib.axes.Axes.boxplot.html#matplotlib.axes.Axes.boxplot).\n",
     "\n",
     "常用参数：\n",
@@ -2136,7 +2139,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2150,7 +2153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   },
   "toc-autonumbering": true
  },
