--- a/Kaggle/Titanic-#1/titanic.ipynb
+++ b/Kaggle/Titanic-#1/titanic.ipynb
@@ -16,18 +16,19 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.impute import MissingIndicator\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.linear_model import LogisticRegression, LogisticRegressionCV\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "import xgboost as xgb"
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "# %matplotlib inline\n",
+    "plt.style.use('ggplot')\n",
+    "from IPython.display import display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -39,14 +40,13 @@
    },
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
-    "from plotly.subplots import make_subplots\n",
-    "# %matplotlib inline\n",
-    "plt.style.use('ggplot')\n",
-    "from IPython.display import display"
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.impute import MissingIndicator\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.linear_model import LogisticRegression, LogisticRegressionCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "import xgboost as xgb"
    ]
   },
   {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -77,7 +77,7 @@
        "'D:\\\\Project-Workspace\\\\Python-Projects\\\\DataAnalysis\\\\Kaggle\\\\Titanic-#1'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,8 +88,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 数据概览"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train.shape: (891, 12),  test.shape: (418, 11).\n"
+     ]
+    }
+   ],
+   "source": [
+    "train = pd.read_csv('train.csv')\n",
+    "test = pd.read_csv('test.csv')\n",
+    "print(f\"train.shape: {train.shape},  test.shape: {test.shape}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -284,9 +310,9 @@
     }
    ],
    "source": [
-    "train = pd.read_csv('train.csv')\n",
     "# 将 PassengerId 设置为index，它对于预测没有帮助\n",
     "train.set_index('PassengerId', inplace=True)\n",
+    "test.set_index('PassengerId', inplace=True)\n",
     "display(train.head())\n",
     "display(train.info())"
    ]
@@ -320,6 +346,8 @@
     }
    },
    "source": [
+    "## 数据可视化\n",
+    "\n",
     "二分类问题，根据直觉，先检查下各个特征在预测变量上的分布。  \n",
     "1. 这里不考虑Name，因为直觉上它和是否幸存没有关系。  \n",
     "1. 对于船票编号Ticket，也不考虑。\n",
@@ -343,12 +371,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ 使用seaborn做EDA"
+    "### 使用seaborn做EDA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -359,7 +387,7 @@
        "<AxesSubplot:xlabel='Age', ylabel='Survived'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -376,6 +404,7 @@
    ],
    "source": [
     "fig, axes = plt.subplots(nrows=2, ncols=4, figsize=(20, 8))\n",
+    "\n",
     "sns.countplot(data=train, x='Pclass', hue='Survived', ax=axes[0,0])\n",
     "sns.countplot(data=train, x='Sex', hue='Survived', ax=axes[0,1])\n",
     "sns.countplot(data=train, x='SibSp', hue='Survived', ax=axes[0,2])\n",
@@ -387,9 +416,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "+ 使用plotly做EDA\n",
+    "### 使用plotly做EDA\n",
     "\n",
     "可以看出，使用plotly的话，需要自己做不少数据处理的工作，没有seaborn方便。"
    ]
@@ -4727,6 +4759,390 @@
     "    title=dict(text='Titanic Survived Analysis: Part-I', x=0.5),\n",
     "    xaxis_title_text='Fare', xaxis2_title_text='Age'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EDA初步结论\n",
+    "\n",
+    "看起来，Pclass, Sex, SibSp, Parch, Embarked 这几个变量和是否存活有一定关系，而 Fare, Age 这两个特征似乎和是否存活没有关系。\n",
+    "\n",
+    "所以后续的分析，**只选择 Pclass, Sex, SibSp, Parch, Embarked 这 5 个特征**。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train.shape: (891, 6),  test.shape: (418, 5).\n"
+     ]
+    }
+   ],
+   "source": [
+    "cols = ['Pclass', 'Sex', 'SibSp', 'Parch', 'Embarked']\n",
+    "train = train[cols+['Survived']]\n",
+    "test = test[cols]\n",
+    "\n",
+    "print(f\"train.shape: {train.shape},  test.shape: {test.shape}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 数据预处理"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 缺失值检查"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Embarked</th>\n",
+       "      <th>Survived</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>887</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>888</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>889</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>891</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>891 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Pclass    Sex  SibSp  Parch  Embarked  Survived\n",
+       "PassengerId                                                 \n",
+       "1             False  False  False  False     False     False\n",
+       "2             False  False  False  False     False     False\n",
+       "3             False  False  False  False     False     False\n",
+       "4             False  False  False  False     False     False\n",
+       "5             False  False  False  False     False     False\n",
+       "...             ...    ...    ...    ...       ...       ...\n",
+       "887           False  False  False  False     False     False\n",
+       "888           False  False  False  False     False     False\n",
+       "889           False  False  False  False     False     False\n",
+       "890           False  False  False  False     False     False\n",
+       "891           False  False  False  False     False     False\n",
+       "\n",
+       "[891 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.isnull()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def miss_summary(df, all=True):\n",
+    "    \"\"\"\n",
+    "    用于统计DF中各列的缺失值信息和占比。\n",
+    "    all: 是否返回所有的列\n",
+    "    \"\"\"\n",
+    "    miss_num = df.isnull().sum()\n",
+    "    if not all:\n",
+    "        # 只展示有缺失值的特征\n",
+    "        miss_num = miss_num[miss_num > 0]\n",
+    "    # 总样本量\n",
+    "    total = df.shape[0]\n",
+    "    # 缺失占比\n",
+    "    miss_percent = miss_num/total*100\n",
+    "    # 各个特征的取值\n",
+    "    \n",
+    "    miss_info = pd.concat([miss_num, miss_percent, df.dtypes], axis = 1, keys=['miss_num', 'miss_percent','dtype'])\n",
+    "    miss_info['total'] = total\n",
+    "    miss_info = miss_info[['miss_num','total','miss_percent','dtype']]\n",
+    "    miss_info.dropna(inplace=True)\n",
+    "    # 降序排列，同时设置小数点的位数\n",
+    "    miss_info = miss_info.sort_values(by=['miss_num'],ascending=False).round(decimals=3)\n",
+    "    return miss_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>miss_num</th>\n",
+       "      <th>total</th>\n",
+       "      <th>miss_percent</th>\n",
+       "      <th>dtype</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Embarked</th>\n",
+       "      <td>2</td>\n",
+       "      <td>891</td>\n",
+       "      <td>0.224</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pclass</th>\n",
+       "      <td>0</td>\n",
+       "      <td>891</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sex</th>\n",
+       "      <td>0</td>\n",
+       "      <td>891</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SibSp</th>\n",
+       "      <td>0</td>\n",
+       "      <td>891</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Parch</th>\n",
+       "      <td>0</td>\n",
+       "      <td>891</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          miss_num  total  miss_percent   dtype\n",
+       "Embarked         2    891         0.224  object\n",
+       "Pclass           0    891         0.000   int64\n",
+       "Sex              0    891         0.000  object\n",
+       "SibSp            0    891         0.000   int64\n",
+       "Parch            0    891         0.000   int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "miss_info = miss_summary(train[cols])\n",
+    "miss_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['S', 'C', 'Q', nan], dtype=object)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train['Embarked'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'unique'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\DANIEL~1\\AppData\\Local\\Temp/ipykernel_11568/736389961.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\Miniconda\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5485\u001b[0m         ):\n\u001b[0;32m   5486\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5487\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5488\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5489\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'unique'"
+     ]
+    }
+   ],
+   "source": [
+    "train.unique()"
    ]
   },
   {
