特征工程练习

--- a/ML-Action/00-feature-engeneering.ipynb
+++ b/ML-Action/00-feature-engeneering.ipynb
@@ -1881,8 +1881,11 @@
     "    + drop_idx[i] 表示第 i 个特征被丢弃的取值，None表示该特征没有被丢弃的值\n",
     "  + n_features_in_: int，特征的数目\n",
     "  + features_name_in_\n",
-    "  \n",
-    "> 注意，drop=first时，handle_unknow必须为error，此时不能处理未知值的情况。"
+    "\n",
+    "注意事项：\n",
+    "> 1. `fit()`或者`transform()`方法中传入的数据里，**只能有分类特征**，它不能指定只转换哪些特征列，如果将数值特征列也传入的话，它会将该特征列也进行编码！！！\n",
+    "2. 如果指定了`catetories`参数，那么后续的fit和transform方法里，也必须以这个顺序传入特征\n",
+    "3. drop=first时，handle_unknow必须为error，此时不能处理未知值的情况。\n"
    ]
   },
   {
@@ -3034,8 +3037,8 @@
     "在sklearn当中，有三种常用的方法来评判特征与标签之间的相关性：  \n",
     "\n",
     "1、 卡方 $\\chi^2$ 检验   \n",
-    "+ 卡方过滤是专门针对**离散型标签（即分类问题）**的相关性过滤。\n",
-    "+ **卡方变量的值越大，表示该特征和目标变量之间的相关性越大**（独立性越强）\n",
+    "+ 卡方过滤是专门针对**离散型标签（即分类问题）**的相关性过滤，背后的原理就是**列联表的独立性检验**。\n",
+    "+ **卡方变量的值越大，表示该特征和目标变量之间的相关性越大**（独立性越弱）\n",
     "+ 卡方检验函数`feature_selection.chi2`计算每个**非负特征**和目标之间的卡方统计量，并依照卡方统计量由高到低为特征排名。  \n",
     "\n",
     "\n",
