--- a/ML-Action/06-pytorch-tutorial.ipynb
+++ b/ML-Action/06-pytorch-tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -10,13 +10,12 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.19.2\n",
-      "pandas:      1.2.2\n",
-      "matplotlib:  3.3.4\n",
-      "sklearn:     0.23.2\n",
-      "seaborn:     0.11.1\n",
-      "plotly:      4.14.3\n",
-      "PyTorch:      1.2.0+cpu\n"
+      "numpy:       1.21.2\n",
+      "pandas:      1.3.4\n",
+      "matplotlib:  3.5.1\n",
+      "sklearn:     1.0.2\n",
+      "seaborn:     0.11.2\n",
+      "PyTorch:      1.2.0\n"
      ]
     }
    ],
@@ -25,18 +24,16 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import plotly.express as px\n",
-    "from plotly import graph_objects as go\n",
-    "\n",
-    "import matplotlib\n",
-    "import plotly\n",
-    "import sklearn\n",
-    "import torch\n",
-    "\n",
+    "# import plotly.express as px\n",
+    "# from plotly import graph_objects as go\n",
     "from torch import nn, optim\n",
-    "\n",
     "from IPython.display import display\n",
     "plt.style.use(\"ggplot\")\n",
+    "\n",
+    "import matplotlib\n",
+    "# import plotly\n",
+    "import sklearn\n",
+    "import torch\n",
     "\n",
     "print(\"package版本信息：\")\n",
     "print(\"numpy:      \", np.__version__)\n",
@@ -44,7 +41,7 @@
     "print(\"matplotlib: \", matplotlib.__version__)\n",
     "print(\"sklearn:    \", sklearn.__version__)\n",
     "print(\"seaborn:    \", sns.__version__)\n",
-    "print(\"plotly:     \", plotly.__version__)\n",
+    "# print(\"plotly:     \", plotly.__version__)\n",
     "print(\"PyTorch:     \", torch.__version__)"
    ]
   },
@@ -66,9 +63,9 @@
     "有两种方式可以创建Tensor：\n",
     "1. 使用`torch.Tensor()`构造方法，注意，这是`torch.Tensor`类的构造器方法\n",
     "2. 使用`torch.xxx()`函数来创建Tensor，比如：\n",
-    "  + `torch.tensor(data, dtype=None, device=None, requires_grad=False,)`——这是静态函数，用于从已有数据中创建tensor，注意这里的`requires_grad`参数。\n",
-    "  + `torch.ones()`\n",
-    "  + `torch.zeros()`\n",
+    "   + `torch.tensor(data, dtype=None, device=None, requires_grad=False,)`——这是静态函数，用于从已有数据中创建tensor，注意这里的`requires_grad`参数。\n",
+    "   + `torch.ones()`\n",
+    "   + `torch.zeros()`\n",
     "  \n",
     "上述两种方法都会返回`torch.Tensor`的对象。\n",
     "\n",
@@ -79,17 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[2.9339e+32, 7.5551e+31, 1.5089e-19],\n",
-       "        [4.4656e+30, 3.3917e-15, 0.0000e+00]])"
+       "tensor([[0.0000e+00, 0.0000e+00, 0.0000e+00],\n",
+       "        [0.0000e+00, 0.0000e+00, 4.2958e-05]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +109,7 @@
        "        [4., 5., 6.]])"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +131,7 @@
        "tensor([[1, 2]])"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +160,7 @@
        "torch.float32"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +180,7 @@
        "torch.Size([2, 3])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +200,7 @@
        "torch.Size([2, 3])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -223,13 +220,33 @@
        "6"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "t1.numel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cpu')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1.device"
    ]
   },
   {
@@ -484,18 +501,134 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "+ 四则运算操作"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.rand(2,2)\n",
+    "y = torch.rand(2,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.9224, 1.2232],\n",
+       "        [0.1262, 0.5949]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x + y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.9224, 1.2232],\n",
+       "        [0.1262, 0.5949]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.add(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.9224, 1.2232],\n",
+       "        [0.1262, 0.5949]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.add(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.5497, 2.0450],\n",
+       "        [0.1795, 0.6787]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# inplace 加法，会改变 y 的值\n",
+    "y.add_(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.5497, 2.0450],\n",
+       "        [0.1795, 0.6787]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "神经网络的输入中，特别是RNN模型，常常需要对输入的数据的不同维度进行交换，主要是Batch size 这个维度。  \n",
     "有两种方式可以处理：\n",
     "1. `torch.transpose()`\n",
     "2. `numpy.transpose()`"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -4306,9 +4439,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "tensorflow1.15",
    "language": "python",
-   "name": "python3"
+   "name": "tensorflow1.15"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4320,7 +4453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.11"
   },
   "toc-autonumbering": true
  },
