--- a/ML-Action/06-pytorch-tutorial.ipynb
+++ b/ML-Action/06-pytorch-tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
     "这意味着不再需要在代码中到处使用`Variable`封装器。\n",
     "\n",
     "创建Tensor的时候，有两种方式让这个Tensor作为变量进行求导操作：\n",
-    "1. 创建时指定参数`required_grad=True`\n",
+    "1. 使用`torch.tensor()`创建时指定参数`required_grad=True`\n",
     "2. 创建后通过`torch.Tensor`对象的`.required_grad`属性进行设置\n",
     "\n",
     "注意，**只有浮点数类型的Tensor才能设置求导**。"
@@ -699,9 +699,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 自动求导过程\n",
+    "\n",
+    "可以参考官方文档：\n",
+    "+ [AUTOMATIC DIFFERENTIATION WITH TORCH.AUTOGRAD](https://pytorch.org/tutorials/beginner/basics/autogradqs_tutorial.html#)\n",
+    "+ [AUTOGRAD MECHANICS](https://pytorch.org/docs/stable/notes/autograd.html#)\n",
+    "+ [A GENTLE INTRODUCTION TO TORCH.AUTOGRAD](https://pytorch.org/tutorials/beginner/blitz/autograd_tutorial.html#gradients)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以 $y = a\\times x + b$ 这个操作为例，其中 a, b 是参数，x 是自变量，y 是因变量。   \n",
+    "使用pytorch表示这个表达式的时候，整个的运算流程会被作为一个DAG表示，每个节点是一个运算操作（实际上是一个`Function`对象），比如+，-，x，\\等。   \n",
+    "上式中，$a \\times x$ 就是一个乘法节点，$y$ 是一个加法节点。\n",
+    "\n",
+    "pytorch中每个`Tensor`对象都有如下两个属性：\n",
+    "+ `grad_fn`：是一个`Function`对象，保存了该tensor的操作历史，即它是什么操作的输出，这个对应于计算图中的节点。   \n",
+    "通常由用户创建的节点是叶子节点，它的`grad_fn`通常为None。\n",
+    "+ `grad`：保存了当前节点的梯度。  \n",
+    "一般只有设置了`requires_grad=True`的tensor才会计算梯度并保留下来，而中间节点的梯度只在计算过程中生成，不保留。\n",
+    "\n",
+    "如果要反向计算梯度，只需要在最后的tensor（它是计算图中的根结点）上调用`.backwards()`方法即可。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.tensor([1.0])\n",
+    "a = torch.tensor([1.0], requires_grad=True)\n",
+    "b = torch.tensor([1.0], requires_grad=True)\n",
+    "t = a*x\n",
+    "y = t + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x.grad_fn None\n",
+      "a.grad_fn None\n",
+      "b.grad_fn None\n",
+      "t.grad_fn <MulBackward0 object at 0x000001EC8B4C88C8>\n",
+      "y.grad_fn <AddBackward0 object at 0x000001EC8B4C8CC8>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"x.grad_fn\", x.grad_fn)\n",
+    "print(\"a.grad_fn\", a.grad_fn)\n",
+    "print(\"b.grad_fn\", b.grad_fn)\n",
+    "print(\"t.grad_fn\", t.grad_fn)\n",
+    "print(\"y.grad_fn\", y.grad_fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x.grad None\n",
+      "a.grad tensor([1.])\n",
+      "b.grad tensor([1.])\n",
+      "t.grad None\n",
+      "y.grad None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"x.grad\", x.grad)\n",
+    "print(\"a.grad\", a.grad)\n",
+    "print(\"b.grad\", b.grad)\n",
+    "print(\"t.grad\", t.grad)\n",
+    "print(\"y.grad\", y.grad)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "----\n",
     "\n",
-    "## 多元函数的反向求导\n",
+    "## 多元函数的求导\n",
     "\n",
     "多元函数是 $R^n \\Rightarrow R$ 的一个映射：自变量 $x \\in R^n$，因变量 $y=f(x) \\in R$. 这种情况下，偏导数 $\\frac{\\partial f}{\\partial x} \\in R^n$ 也是一个 $n$ 维向量.  \n",
     "\n",
@@ -715,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -760,13 +861,13 @@
       "-----------检查各节点的梯度-------------------\n",
       "t1.requires_grad:  True\n",
       "t1.grad:  None\n",
-      "t1.grad_fn:  <MulBackward0 object at 0x0000022724238BE0>\n",
+      "t1.grad_fn:  <MulBackward0 object at 0x000001EC8BC2D848>\n",
       "t2.requires_grad:  True\n",
       "t2.grad:  None\n",
-      "t2.grad_fn:  <PowBackward0 object at 0x000002272D296CC0>\n",
+      "t2.grad_fn:  <PowBackward0 object at 0x000001EC8C6AA948>\n",
       "c.requires_grad:  True\n",
       "c.grad:  None\n",
-      "c.grad_fn:  <AddBackward0 object at 0x000002272D2960B8>\n",
+      "c.grad_fn:  <AddBackward0 object at 0x000001EC8C5A22C8>\n",
       "-----------检查是否为叶子节点----------------\n",
       "a.is_leaf: True\n",
       "b.is_leaf: True\n",
@@ -870,14 +971,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 向量函数的反向求导\n",
+    "## 向量函数的求导\n",
+    "\n",
+    "参考文档:\n",
+    "+ [A GENTLE INTRODUCTION TO TORCH.AUTOGRAD --> Differentation in Autograd](https://pytorch.org/tutorials/beginner/blitz/autograd_tutorial.html#differentiation-in-autograd)\n",
+    "+ [Pytorch, what are the gradient arguments](https://stackoverflow.com/questions/43451125/pytorch-what-are-the-gradient-arguments)\n",
     "\n",
     "另一种情况是向量函数的偏导数.  \n",
-    "所谓**向量函数**，是 $ R^n \\Rightarrow R^m$ 的一个映射：自变量 $x \\in R^n $ 是一个 $n$ 维向量，同时因变量 $f(x) = (y_1, y_2,..., y_m)^T \\in R^m$ 也是一个 $m$ 维向量，其中的 $y_j = y_j(x) \\in R$ 是一个多元函数。 \n",
+    "所谓**向量函数**，是 $ R^n \\Rightarrow R^m$ 的一个映射：自变量 $x \\in R^n $ 是一个 $n$ 维向量，同时因变量 $f(x) = (y_1, y_2,..., y_m)^T \\in R^m$ 也是一个 $m$ 维向量，其中的 $y_j = y_j(x) \\in R$ 是一个 $R^n \\Rightarrow R$ 的多元函数。 \n",
     "\n",
     "PyTorch的`autograd`模块有个简单粗暴的规定，**只能执行标量对张量的求导，不能执行张量对张量的求导** 。  \n",
-    "为了对向量函数求偏导数，也就是实现张量对张量的求导，PyTorch的`.backward()`方法里，提供了一个 `grad_variables=` 参数，它是一个 $m$ 维的向量，维度和 $f(x)$ 一样，作用是和 $f(x)$ 做内积，得到一个实数，然后对这个实数变量求偏导数.  \n",
-    "具体来说，就是设 `grad_variables`参数对应的向量是 $v \\in R^m$，那么就会得到一个内积值 $l = \\sum_{j=1}^{m}{v_j y_j(x)} \\in R$，那么就是：  \n",
+    "为了对向量函数求偏导数，也就是实现张量对张量的求导，PyTorch的`.backward()`方法里，提供了一个 `gradient=` 参数，它是一个 $m$ 维的向量，维度和 $f(x)$ 一样，作用是和 $f(x)$ 做内积，得到一个实数，然后对这个实数变量求偏导数.  \n",
+    "\n",
+    "具体来说，就是设 `gradient`参数对应的向量是 $v \\in R^m$，那么就会得到一个内积值 $l = \\sum_{j=1}^{m}{v_j y_j(x)} \\in R$，那么就是：  \n",
     "$\\frac{\\partial l}{\\partial x} = \\frac{\\partial l}{\\partial y}\\frac{\\partial y}{\\partial x}$，其中 $\\frac{\\partial l}{\\partial y} = v \\in R^m$，而 $\\frac{\\partial y}{\\partial x} \\in R^{m\\times n}$ 是一个雅克比矩阵，两者相乘，最后得到的就是一个 $n$ 维的梯度向量.  \n"
    ]
   },
@@ -923,9 +1029,16 @@
     "\\right\\}\n",
     "$.\n",
     "\n",
-    "当 `gradient` $=[1, 1]$时，\n",
+    "接下来可以看看`gradient`各种取值下得到的梯度"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 当 `gradient` $=[1, 1]$时，\n",
     "$\n",
-    "[1, 1]^T \\times\n",
+    "[1, 1] \\times\n",
     "\\left\\{\n",
     "\\begin{matrix}\n",
     "   4 & 0 \\\\\n",
@@ -938,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -965,9 +1078,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "当 `gradient` $=[1, 2]$时，\n",
+    "+ 当 `gradient` $=[1, 2]$时，\n",
     "$\n",
-    "[1, 2]^T \\times\n",
+    "[1, 2] \\times\n",
     "\\left\\{\n",
     "\\begin{matrix}\n",
     "   4 & 0 \\\\\n",
@@ -980,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1000,8 +1113,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 当 `gradient` $=[2, 1]$时，\n",
+    "$\n",
+    "[2, 1] \\times\n",
+    "\\left\\{\n",
+    "\\begin{matrix}\n",
+    "   4 & 0 \\\\\n",
+    "   0 & 6 \n",
+    "\\end{matrix}\n",
+    "\\right\\}\n",
+    "= [8, 6]^T\n",
+    "$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1024,8 +1154,122 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 自定义函数的反向求导-TODO"
+    "## element-wise函数的求导\n",
+    "\n",
+    "这里自定义了一个 $y = 3 \\times x^2$ 函数，它本身是 $R \\Rightarrow R$ 的一个实函数映射。  \n",
+    "它的导数为：$\\frac{\\partial y}{\\partial x} = 6 \\times x$.\n",
+    "\n",
+    "但是其中的输入 x 是一个 2x3 的矩阵，pytorch 会使用 **element-wise** 的方式，对每个元素都应用此映射，最后得到的 y 也是一个 2x3 的矩阵。   \n",
+    "这种情况下，它的导数也应该是对原有的导数解析表达式使用 element-wise 的方式，最后得到的也是一个 2x3 的矩阵。\n",
+    "\n",
+    "但是此时**不能直接使用`y.backward()`反向求导**，因为`y`不是一个标量，需要传入`gradient=`参数。  \n",
+    "下面考察一下`gradient`的各种取值的情况：\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.tensor([[1,2,3], [4,5,6]], dtype=torch.float, requires_grad=True)\n",
+    "y = 3*x**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[  3.,  12.,  27.],\n",
+       "        [ 48.,  75., 108.]], grad_fn=<MulBackward0>)"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `gradient=`为 **全1矩阵**，形状和 y 一样，此时可以看出，反向求导的矩阵是对 $\\frac{\\partial y}{\\partial x} = 6 \\times x$ 应用 element-wise 得到的结果。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 6., 12., 18.],\n",
+       "        [24., 30., 36.]])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grad = torch.tensor([[1,1,1],[1,1,1]], dtype=torch.float)\n",
+    "y.backward(gradient=grad)\n",
+    "x.grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `gradient=`为 其他的矩阵，形状和 y 一样，此时可以看出，反向求导的矩阵是对 $\\frac{\\partial y}{\\partial x} = 6 \\times x$ 应用 element-wise 之后，**再乘以对应位置的值**的结果。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 6.,  0., 36.],\n",
+       "        [ 0., 30.,  0.]])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grad = torch.tensor([[1,0,2],[0,1,0]], dtype=torch.float)\n",
+    "y.backward(gradient=grad)\n",
+    "x.grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 计算图注意事项"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
